# PointNemo

./: .gitignore  CMakeLists.txt  README.md  metrics.txt  process_audio.py
class_lib/: plotter.py
first-try/: anc_sim.py
include/: audio_io.hpp  params.hpp
include/algorithm/: fxlms.hpp
include/dsp/: fir.hpp
model/: README.md
model/Playback/: README.md  find_devices.py  play_anc_test.py
model/output/: plots.py
model/src/: main.py
model/src/algorithm/: README.md  anc_controller.py  reference_model.py  scalar.py  secondary_path.py  wiener.py
model/src/dsp/: filters.py  stft.py  utils.py
model/src/io/: sampling.py
model/src/pn_io/: sampling.py  wav.py
src/: README.md  main.cpp
